--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,9 +1,12 @@
 // -*- mode: jsonc -*-
 {
-    // "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 20, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
+    "layer": "top", // Waybar at top layer
+    "position": "bottom",
+    // "margin-bottom": 1,
+    // "position": "left", // Waybar position (top|bottom|left|right)
+    // "height": 20, // Waybar height (to be removed for auto height)
+    // "exclusive": false,           // don’t reserve space; float over windows
+    // "width": 1278, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
     //"modules-left": [
@@ -23,7 +26,7 @@
         "memory",
         "temperature",
         "battery",
-        // "power-profiles-daemon",
+        "power-profiles-daemon",
         // "mpd",
         "keyboard-state",
         "pulseaudio",
@@ -189,15 +192,16 @@
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
         "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-bluetooth": "{volume}% {icon}  {format_source}",
+        "format-bluetooth-muted": " {icon}  {format_source}",
         "format-muted": "  {format_source}",
-        "format-source": "{volume}% ",
+        // "format-source": " {volume}% ",
+        "format-source": "	",
         "format-source-muted": "",
         "format-icons": {
             "headphone": "",
-            "hands-free": "",
-            "headset": "",
+            "hands-free": "",
+            "headset": "",
             "phone": "",
             "portable": "",
             "car": "",
