--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
-preload = /home/lexman/images/system_images/retro_pc.jpeg
-wallpaper = , /home/lexman/images/system_images/retro_pc.jpeg
-
+preload = /home/lexman/images/hyprpapers/retro_commodore.jpg
+wallpaper = , /home/lexman/images/hyprpapers/retro_commodore.jpg
