--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -288,7 +288,13 @@ bind = $mainMod, O, exec, hyprlock
 # Launch firefox
 bind = $mainMod, F, exec, firefox &
 bind = $mainMod, D, exec, discord &
-bind = $mainMod, s, exec, signal-desktop &
+# bind = $mainMod, s, exec, signal-desktop &
+# Save screenshot to file
+# bind = SUPER SHIFT CONTROL, S, exec, grim -g "$(slurp)" ~/Pictures/screenshot_$(date +%s).png
+#
+# # Copy screenshot to clipboard
+bind = CONTROL SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
