--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -183,7 +183,8 @@
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} 󰌘",
+        // "format-ethernet": "{ipaddr}/{cidr} 󰌘",
+        "format-ethernet": "Ethernet(Up) 󰌘",
         "tooltip-format": "{ifname} via {gwaddr} 󰖭",
         "format-linked": "{ifname} (No IP) 󰈂",
         "format-disconnected": "Disconnected ⚠",
